@@ -1,50 +1,46 @@
 package com.denizenscript.denizen.nms;
 
+import com.denizenscript.denizen.nms.abstracts.*;
 import com.denizenscript.denizen.nms.interfaces.*;
 import com.denizenscript.denizen.nms.util.PlayerProfile;
 import com.denizenscript.denizen.nms.util.jnbt.CompoundTag;
 import com.denizenscript.denizen.nms.util.jnbt.Tag;
-import com.denizenscript.denizen.nms.abstracts.AnimationHelper;
-import com.denizenscript.denizen.nms.abstracts.BiomeNMS;
-import com.denizenscript.denizen.nms.abstracts.BlockLight;
-import com.denizenscript.denizen.nms.abstracts.ParticleHelper;
-import com.denizenscript.denizen.nms.abstracts.ProfileEditor;
-import com.denizenscript.denizen.nms.abstracts.Sidebar;
-import com.denizenscript.denizencore.utilities.ReflectionHelper;
 import net.md_5.bungee.api.chat.HoverEvent;
+import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.block.Block;
+import org.bukkit.boss.BossBar;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
+import org.bukkit.inventory.InventoryView;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.plugin.java.JavaPlugin;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 
 public abstract class NMSHandler {
 
-    private static NMSHandler instance;
+    public static NMSHandler instance;
     private static NMSVersion version;
     private static JavaPlugin javaPlugin;
 
     public static boolean debugPackets = false;
+    public static String debugPacketFilter = "";
 
     public static boolean initialize(JavaPlugin plugin) {
         javaPlugin = plugin;
-        Class<?> serverClass = javaPlugin.getServer().getClass();
-        ReflectionHelper.giveReflectiveAccess(serverClass, ReflectionHelper.class);
-        String packageName = serverClass.getPackage().getName();
-        int indexOfSubRevision = packageName.indexOf('R');
-        if (indexOfSubRevision > 0) {
-            // "v1_14_R1" should become "v1_14"
-            packageName = packageName.substring(0, indexOfSubRevision - 1);
+        String bukkitVersion = Bukkit.getBukkitVersion();
+        for (NMSVersion potentialVersion : NMSVersion.values()) {
+            if (bukkitVersion.startsWith(potentialVersion.minecraftVersion)) {
+                version = potentialVersion;
+                break;
+            }
         }
-        try {
-            // Check if we support this MC version
-            version = NMSVersion.valueOf(packageName.substring(packageName.lastIndexOf('.') + 1));
-        }
-        catch (Exception e) {
+        if (version == null) {
             version = NMSVersion.NOT_SUPPORTED;
             instance = null;
             return false;
@@ -54,10 +50,7 @@ public abstract class NMSHandler {
             final Class<?> clazz = Class.forName("com.denizenscript.denizen.nms." + version.name() + ".Handler");
             if (NMSHandler.class.isAssignableFrom(clazz)) {
                 // Found and loaded - good to go!
-                instance = (NMSHandler) clazz.newInstance();
-                if (version.isAtMost(NMSVersion.v1_16)) {
-                    enchantmentHelper = new EnchantmentHelper();
-                }
+                instance = (NMSHandler) clazz.getDeclaredConstructor().newInstance();
                 return true;
             }
         }
@@ -90,64 +83,11 @@ public abstract class NMSHandler {
     public static EntityHelper entityHelper;
     public static FishingHelper fishingHelper;
     public static ItemHelper itemHelper;
-    public static SoundHelper soundHelper;
     public static PacketHelper packetHelper;
     public static ParticleHelper particleHelper;
     public static PlayerHelper playerHelper;
     public static WorldHelper worldHelper;
     public static EnchantmentHelper enchantmentHelper;
-
-    public static AdvancementHelper getAdvancementHelper() {
-        return advancementHelper;
-    }
-
-    public static AnimationHelper getAnimationHelper() {
-        return animationHelper;
-    }
-
-    public static BlockHelper getBlockHelper() {
-        return blockHelper;
-    }
-
-    public static ChunkHelper getChunkHelper() {
-        return chunkHelper;
-    }
-
-    public static CustomEntityHelper getCustomEntityHelper() {
-        return customEntityHelper;
-    }
-
-    public static EntityHelper getEntityHelper() {
-        return entityHelper;
-    }
-
-    public static FishingHelper getFishingHelper() {
-        return fishingHelper;
-    }
-
-    public static ItemHelper getItemHelper() {
-        return itemHelper;
-    }
-
-    public static SoundHelper getSoundHelper() {
-        return soundHelper;
-    }
-
-    public static PacketHelper getPacketHelper() {
-        return packetHelper;
-    }
-
-    public static ParticleHelper getParticleHelper() {
-        return particleHelper;
-    }
-
-    public static PlayerHelper getPlayerHelper() {
-        return playerHelper;
-    }
-
-    public static WorldHelper getWorldHelper() {
-        return worldHelper;
-    }
 
     public boolean isCorrectMappingsCode() {
         return true;
@@ -167,19 +107,29 @@ public abstract class NMSHandler {
 
     public abstract ProfileEditor getProfileEditor();
 
+    public List<BiomeNMS> getBiomes(World world) {
+        throw new UnsupportedOperationException();
+    }
+
     public abstract BiomeNMS getBiomeNMS(World world, String name);
 
     public BiomeNMS getBiomeAt(Block block) {
-        return NMSHandler.getInstance().getBiomeNMS(block.getWorld(), block.getBiome().name());
+        return NMSHandler.instance.getBiomeNMS(block.getWorld(), block.getBiome().name());
     }
 
     public abstract double[] getRecentTps();
 
     public abstract CompoundTag createCompoundTag(Map<String, Tag> value);
 
-    public abstract int getPort();
+    public CompoundTag parseSNBT(String snbt) {
+        throw new UnsupportedOperationException();
+    }
 
     public abstract String getTitle(Inventory inventory);
+
+    public void setInventoryTitle(InventoryView view, String title) {
+        throw new UnsupportedOperationException();
+    }
 
     public abstract String stringForHover(HoverEvent hover);
 
@@ -188,4 +138,11 @@ public abstract class NMSHandler {
     public abstract boolean containerHas(PersistentDataContainer container, String key);
 
     public abstract String containerGetString(PersistentDataContainer container, String key);
+
+    public UUID getBossbarUUID(BossBar bar) {
+        return null;
+    }
+
+    public void setBossbarUUID(BossBar bar, UUID id) {
+    }
 }
